<resources>
    <string name="app_name">Tweeter</string>
    <string name="tweet_button">Tweet</string>
    <string name="tweet_hint">What\&#39;s happening?</string>
    <string name="contact_button">Select Contact</string>
    <string name="email_button">Email Tweet Via</string>
    <string name="new_tweet">New Tweet</string>
    <string name="timeline">Global Timeline</string>
    <string name="followedtimeline">Followed Timeline</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="users">View Users</string>
    <string name="welcomeLogin">Login</string>
    <string name="welcomeSignup">Sign up</string>
    <string name="welcomeHeading">Welcome to\nTweeter</string>
    <string name="welcomeMsg">See what\&#39;s happening in the great WIT world right now</string>
    <string name="signupFirstName">First Name</string>
    <string name="signupLastName">Last Name</string>
    <string name="signupEmail">Email</string>
    <string name="signupPassword">Password</string>
    <string name="signupButton">Sign Up to Tweeter</string>
    <string name="updateButton">Update Account</string>
    <string name="loginTitle">Enter your email and password</string>
    <string name="loginSubtitle">You must be registered</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="loginSignIn">Apply</string>
    <string name="delete_tweet">Delete Tweet</string>
    <string name="clear">Delete All</string>
    <string name="email_summary">Please enter your email</string>
    <string name="email">Email</string>
    <string name="password_summary">You may set your password here</string>
    <string name="password">Password</string>
    <string name="firstname_summary">Your First Name</string>
    <string name="firstname">First name</string>
    <string name="lastname_summary">Your Last Name</string>
    <string name="lastname">Last name</string>
</resources>
