<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <EditTextPreference
        android:key="email"
        android:summary="@string/email_summary"
        android:title="@string/email"
        android:inputType="textEmailAddress"/>

    <EditTextPreference
        android:key="password"
        android:summary="@string/password_summary"
        android:title="@string/password"
        android:inputType="textPassword"/>

    <EditTextPreference
        android:key="firstname"
        android:summary="@string/firstname_summary"
        android:title="@string/firstname"
        android:inputType="text"/>

    <EditTextPreference
        android:key="lastname"
        android:summary="@string/lastname_summary"
        android:title="@string/lastname"
        android:inputType="text"/>

</PreferenceScreen>