<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="org.wit.myrent.ResidenceActivity">

    <item android:id="@+id/menu_item_new_tweet"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/new_tweet"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_clear"
        android:icon="@android:drawable/ic_delete"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/clear"/>

</menu>